# wifi-experiment-controller

./: .gitattributes  .gitignore  Cargo.toml  shell.nix
src/: capture.rs  connection.rs  hosts.rs  lib.rs  main.rs  monitor.rs  package.rs  scripts.rs  utils.rs
src/capture/: aid_test.pcapng  utils.rs
src/driver/: wifi.rs
src/driver/wifi/: iwlwifi.rs
src/scripts/: downlink.rs  iperf.rs
